Get the order details to js and back to our server.

--- a/public/track.html
+++ b/public/track.html
@@ -1,8 +1,32 @@
 <script type="text/javascript">
+  var _monkey = _monkey || [];
+  _monkey.push(['order_id', '100011797']);
+  _monkey.push(['currency', 'EUR']);
+  _monkey.push(['total', '145,99']);
+  _monkey.push(['quantity', 2]);
+  _monkey.push({
+    'product_sku': '602-15273-GPPA_O311S',
+    'product_name': 'Ohrringe Silber 925 Creolen schwarz weiße Zirkonia Wellenlinie',
+    'product_price': '66,99',
+    'product_quantity': 1,
+    'category_ids': [48, 55],
+    'category_names': ['Ohrringe', 'Marken']
+  });
+  _monkey.push({
+    'product_sku': '606-16971-HK340310080',
+    'product_name': 'Fascination by Ellen K. Creolen zweifarbig',
+    'product_price': '79,00',
+    'product_quantity': 1,
+    'category_ids': [48],
+    'category_names': ['Ohrringe']
+  });
+</script>
+
+<script type="text/javascript">
   (function() {
     var t = document.createElement('script');
     t.type = 'text/javascript'; t.async = true; t.id = '_monkey-tracker';
-    t.src = '//127.0.0.1:9393/track/478uoyfGatnI9y2iXLqDOtEjEUOTF3YX.js';
+    t.src = '//127.0.0.1:9393/track/X1gq2WDHXeZsihNyjW96SNBEp5VrvhbY.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
