--- a/public/track.html
+++ b/public/track.html
@@ -1,13 +1,13 @@
 <script type="text/javascript">
   var _monkey = _monkey || [];
-  _monkey.push(['order_id', '100011797']);
+  _monkey.push(['order_id', '100011798']);
   _monkey.push(['currency', 'EUR']);
-  _monkey.push(['total', '145,99']);
+  _monkey.push(['total', 145.99]);
   _monkey.push(['quantity', 2]);
   _monkey.push({
     'product_sku': '602-15273-GPPA_O311S',
     'product_name': 'Ohrringe Silber 925 Creolen schwarz weiße Zirkonia Wellenlinie',
-    'product_price': '66,99',
+    'product_price': 66.99,
     'product_quantity': 1,
     'category_ids': [48, 55],
     'category_names': ['Ohrringe', 'Marken']
@@ -15,7 +15,7 @@
   _monkey.push({
     'product_sku': '606-16971-HK340310080',
     'product_name': 'Fascination by Ellen K. Creolen zweifarbig',
-    'product_price': '79,00',
+    'product_price': 79.00,
     'product_quantity': 1,
     'category_ids': [48],
     'category_names': ['Ohrringe']
