The second parameter for insertBefore was missing.

--- a/public/track.html
+++ b/public/track.html
@@ -9,16 +9,16 @@
     'product_name': 'Ohrringe Silber 925 Creolen schwarz weiße Zirkonia Wellenlinie',
     'product_price': 66.99,
     'product_quantity': 1,
-    'category_ids': [48, 55],
-    'category_names': ['Ohrringe', 'Marken']
+    'category_ids': '48,55',
+    'category_names': 'Ohrringe,Marken'
   });
   _monkey.push({
     'product_sku': '606-16971-HK340310080',
     'product_name': 'Fascination by Ellen K. Creolen zweifarbig',
     'product_price': 79.00,
     'product_quantity': 1,
-    'category_ids': [48],
-    'category_names': ['Ohrringe']
+    'category_ids': '48',
+    'category_names': 'Ohrringe'
   });
 </script>
 
